--- a/app/views/static_pages/policy.html.erb
+++ b/app/views/static_pages/policy.html.erb
@@ -1,2 +1,2 @@
-<h1>StaticPages#policy</h1>
-<p>Find me in app/views/static_pages/policy.html.erb</p>
+<% provide(:title, 'Policy') %>
+<h1>QuestOK Policies</h1>
